OnboardingV2Minimal/force-app/main/default/objects/Onboarding_App_Stage_Dependency_Member__c/Onboarding_App_Stage_Dependency_Member__c.object-meta.xml
<CustomObject>
    <description
  >Individual required stage within an Onboarding_Application_Stage_Dependency__c dependency rule. Acts as the &quot;Campaign Member&quot; in the Campaign/Campaign Member pattern, allowing multiple prerequisite stages to be specified per dependency. Example: A dependency rule &quot;Requirement Setup Requires Vendor Selection&quot; might have two members: (1) Required_Stage__c=&quot;Select Vendor&quot; (Stage 1) and (2) Required_Stage__c=&quot;Select Vendor Program&quot; (Stage 2). The parent dependency&apos;s Logic_Type__c determines how members are evaluated (ALL requires all members complete, ANY requires at least one). Multiple members enable complex prerequisite chains where a stage might require completion of several earlier stages before it becomes accessible.</description>
    <label>Onboarding App Stage Dependency Member</label>
    <nameField>
        <displayFormat>OASDM-{000000}</displayFormat>
        <label>Onboarding App Stage Dependency Member N</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding App Stage Dependency Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>