OnboardingV2Minimal/force-app/main/default/objects/Onboarding_App_Stage_Dependency_Member__c/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this stage is mandatory in the dependency chain.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>