OnboardingV2Minimal/force-app/main/default/objects/Onboarding_App_Stage_Dependency_Member__c/fields/Required_Stage__c.field-meta.xml
<CustomField>
    <fullName>Required_Stage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stage that is required as part of the dependency definition.</description>
    <label>Required Stage</label>
    <referenceTo>Onboarding_Application_Stage__c</referenceTo>
    <relationshipLabel>Onboarding App Stage Dependency Members</relationshipLabel>
    <relationshipName>Onboarding_App_Stage_Dependency_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>