OnboardingV2Minimal/force-app/main/default/objects/Onboarding_App_Stage_Dependency_Member__c/fields/Stage_Dependency__c.field-meta.xml
<CustomField>
    <fullName>Stage_Dependency__c</fullName>
    <description>Master-detail to the stage dependency this member belongs to.</description>
    <label>Dependency</label>
    <referenceTo>Onboarding_Application_Stage_Dependency__c</referenceTo>
    <relationshipLabel>Onboarding App Stage Dependency Members</relationshipLabel>
    <relationshipName>Onboarding_App_Stage_Dependency_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>